--- a/params.yaml
+++ b/params.yaml
@@ -1,14 +1,15 @@
-bag_camera_topic: "/flip_camera/image_bag_raw"
-test_camera_topic: "/flip_camera/test"
-bag_pos_topic: "/boat_controller/bag_pos"
-servo_topic: "/bag_flipper/servo"
+flip_camera_topic: "/flip_camera/image_bag_raw"
+test_flip_camera_topic: "/flip_camera/test"
 
-close_angle: 175
-open_angle: 10
+path_camera_topic: "/path_camera/image_bag_raw"
+test_path_camera_topic: "/path_camera/test"
+
+flip_pos_topic: "/boat_controller/flip_pos"
+path_pos_topic: "/boat_controller/path_pos"
 
 lower_color_range: [140,130,60]
 upper_color_range: [190,255,255]
-contour_area: 250
+flip_area: 250
 
 tr: [[400, 40 ], [560, 200]]
 tl: [[0  , 40 ], [80 , 200]]
