--- a/params.yaml
+++ b/params.yaml
@@ -11,9 +11,11 @@ lower_color_range: [140,130,60]
 upper_color_range: [190,255,255]
 flip_area: 250
 
-tr: [[400, 40 ], [560, 200]]
-tl: [[0  , 40 ], [80 , 200]]
-br: [[400, 280], [560, 440]]
-bl: [[0  , 280], [80 , 440]]
+tr: [[160, 40 ], [240, 200]]
+tl: [[80 , 40 ], [160, 200]]
+br: [[160, 280], [240, 440]]
+bl: [[80 , 280], [160, 440]]
+width: 640
+height: 480
 
 side: 1.0
