--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,11 +53,11 @@ find_package( OpenCV 4 REQUIRED )
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
+add_message_files(
    FILES
    FlipPos.msg
    PathPos.msg
-# )
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -109,7 +109,7 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
- INCLUDE_DIRS include
+ #INCLUDE_DIRS include
  LIBRARIES bag_detection
  CATKIN_DEPENDS rospy roscpp std_msgs message_runtime cv_bridge sensor_msgs
 # DEPENDS system_lib
