--- a/params.yaml
+++ b/params.yaml
@@ -1,7 +1,7 @@
 flip_camera_topic: "/flip_camera/image_bag_raw"
 test_flip_camera_topic: "/flip_camera/test"
 
-path_camera_topic: "/path_camera/image_bag_raw"
+path_camera_topic: "/zed/zed_node/stereo/image_rect_color"
 test_path_camera_topic: "/path_camera/test"
 
 flip_pos_topic: "/boat_controller/flip/flip_pos"
@@ -9,9 +9,10 @@ path_pos_topic: "/boat_controller/path/path_pos"
 
 mode_topic: "/boat_controller/mode"
 
-lower_color_range: [140,120,60]
-upper_color_range: [190,255,255]
+lower_color_range: [140,100,50]
+upper_color_range: [200,255,255]
 flip_area: 250
+path_area: 100
 
 tr: [[160, 40 ], [240, 200]]
 tl: [[80 , 40 ], [160, 200]]
