--- a/params/params.yaml
+++ b/params/params.yaml
@@ -19,6 +19,7 @@ tr: [[160, 40 ], [240, 200]]
 tl: [[80 , 40 ], [160, 200]]
 br: [[160, 280], [240, 440]]
 bl: [[80 , 280], [160, 440]]
+vertical: True
 width: 640
 height: 480
 
