--- a/params/params.yaml
+++ b/params/params.yaml
@@ -10,17 +10,18 @@ path_pos_topic: "/boat_controller/path/path_pos"
 
 mode_topic: "/boat_controller/mode"
 
-lower_color_range: [140,100,50]
-upper_color_range: [200,255,255]
-flip_area: 250
-path_area: 100
+dilation: 2
+thres_area_prop: 0.05
+shear_factor: 100
 
-tr: [[160, 40 ], [240, 200]]
-tl: [[80 , 40 ], [160, 200]]
-br: [[160, 280], [240, 440]]
-bl: [[80 , 280], [160, 440]]
-vertical: True
-width: 640
-height: 480
+camera_height: 1
+tl: [120,80]
+br: [432, 240]
+vertical: 1
+direction: 1
+area_prop: 0.5
+
+width: 432
+height: 240
 
 side: 1.0
